fixed feature images and spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,9 +2,12 @@
   text-align: center;
 }
 
+/* intro */
+
 .intro {
   display: flex;
   flex-direction: column;
+  padding-bottom: 5rem;
 }
 
 .mockupContainer {
@@ -27,6 +30,10 @@
 }
 
 @media (min-width: 650px) {
+  .intro {
+    padding-bottom: 5.5rem;
+  }
+
   .mockupContainer {
     max-width: 16rem;
   }
@@ -39,6 +46,10 @@
 }
 
 @media (min-width: 1000px) {
+  .intro {
+    padding-bottom: 0;
+  }
+
   .main {
     text-align: left;
   }
@@ -94,11 +105,14 @@
 
 .questions {
   font-weight: 400;
+  margin-top: 1.5rem;
 }
 
 .inlineLink {
   font-weight: 700;
 }
+
+/* partners */
 
 .partners {
   background-color: var(--darkAppBg);
@@ -188,6 +202,39 @@
 
 .darkText {
   opacity: 0.7;
+}
+
+/* features */
+
+.features {
+  padding: 5rem 0;
+}
+
+.featureGroupTitle {
+  margin-top: 0;
+  margin-bottom: 1.5rem;
+}
+
+.featureGroup {
+}
+
+.featureGroup:last-child {
+  margin-top: 5rem;
+}
+
+.featureContent {
+  max-width: 573px;
+  margin: 0 auto;
+}
+
+.implementMockup {
+  max-width: 445px;
+  margin: 0 auto;
+}
+
+.uiMockup {
+  max-width: 400px;
+  margin: 0 auto;
 }
 
 /* pricing */
