--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,6 +45,7 @@ p {
   font-size: 0.9375rem;
   font-weight: 500;
   line-height: 1.87;
+  margin: 0;
 }
 
 img {
